Fixed the dummy text spacing issue.

--- a/module2-solution/CSS/styles.css
+++ b/module2-solution/CSS/styles.css
@@ -10,7 +10,6 @@
 
 h1 {
   margin-bottom: 15px;
-  font-size: x-large;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
@@ -23,27 +22,60 @@ p {
   height: 150px;
   margin-right: auto;
   margin-left: auto;
-  font-family: Helvetica;
-  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
 }
 
 #one{
   position: relative;
 }
 
+#two{
+  position: relative;
+}
+
+#three{
+  position: relative;
+}
+
 .item1{
   background-color: #A52A2A;
-  padding: 5px;
-  margin-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border: 3px solid black;
+  margin-bottom: 5px;
   position: absolute;
   top: 0;
   right: 0;
 }
 
-.desc1{
-  
+.item2{
+  background-color: turquoise;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border: 3px solid black;
+  margin-bottom: 5px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
+.item3{
+  background-color: violet;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border: 3px solid black;
+  margin-bottom: 5px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
